Levitation import of page 2432 rev 8142.

--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -31,8 +31,9 @@
 ** SÃ©bastien Cevey, theefer@gmail.com
 ** Daniel Svensson, dsvensson@gmail.com
 ** Alexander Botero-Lowry, alex.boterolowry@gmail.com
+** Juho VÃ¤hÃ¤-Herttua, juhovh@gmail.com
 ** <If you feel like doing some GSoC mentoring enter your name here>
-** Commaseparated list of google account addresses: xmmstru@gmail.com, andersg@0x63.nu, theefer@gmail.com, dsvensson@gmail.com, alex.boterolowry@gmail.com
+** Commaseparated list of google account addresses: xmmstru@gmail.com, andersg@0x63.nu, theefer@gmail.com, dsvensson@gmail.com, alex.boterolowry@gmail.com, juhovh@gmail.com
 
 == About The Program ==
 * What is your plan for dealing with disappearing students?
