/* Older Ideas */ add my wishlist
Levitation import of page 2171 rev 8144.

--- a/0-/Developer Ideas.mediawiki
+++ b/0-/Developer Ideas.mediawiki
@@ -63,3 +63,4 @@ Here are some ideas about XMMS2 (or XEPs - ''XMMS2 Enhancement Proposals''), if 
 * [[Random songs support]]
 * [[Automatic Manual Page Generation]]
 * [[Medialib FUSE filesystem]]
+* [[User:Ben:Wishlish | Ben's personal wishlish]]
