--- a/2-User/Ben:Wishlish.mediawiki
+++ b/2-User/Ben:Wishlish.mediawiki
@@ -29,7 +29,7 @@
 * define queries based on directory on disk
 * combine queries
 * search for this artist (available on any song)
-* search for collections containing this song/artist (on any song)
+* search for collections containing this song/artist (on any song in collection, playlist and player)
 
 == Collection/Playlist UI ==
 * when adding song to playlist, optionally start to play immediately
