--- a/0-/Generic properties policy.mediawiki
+++ b/0-/Generic properties policy.mediawiki
@@ -49,7 +49,7 @@ Sources: client/generic/override and client/generic/override/*
 
 Any metadata propery normally set by a plugin can be overridden. client/generic/override is intended for generic overrides, set by user input. 
 
-client/generic/override/*, where * is the name of an override client, is to be used for overriding metadata where there is no user input. This could be used for clients that do thinks like gather metadata from internet radio sites, or that gather metadata from MusicBrainz.
+client/generic/override/*, where * is the name of an override client, is to be used for overriding metadata where there is no user input. This could be used for clients that do things like gather metadata from internet radio sites, or that gather metadata from MusicBrainz.
 
 See Talk page for a discussion about some issues with the override source.
 
