Levitation import of page 2441 rev 8182.

--- a/0-/IRC Meeting/2008-03-29/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-03-29/Agenda.mediawiki
@@ -8,3 +8,4 @@
 * [[Release:DrLecter|DrLecter]] game plan
 * Windows support ([[User:Puzzles|puzzles]])
 ** merge holdups
+* Plugin priorities ([[User:rafl|rafl]])
