--- a/0-/IRC Meeting/2008-03-29/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-03-29/Agenda.mediawiki
@@ -1,5 +1,11 @@
 * Visualizations ([[User:Ypnos|FoPref]])
 ** Let's merge this sucka!
+* Other stuff to merge:
+** plugin priority 
+** mpg123 plugin
+** segment plugin
+** airplay
+** the sqlite fixups by nesciens
 * SoC
 ** Proposals - what kinds of projects do we have and are there any new ideas?
 *** S4 and collections 2.0 might be mutually exclusive, especially if S4 takes the current requirements of collections into account, while the collection concept gets extended for collections 2.0.
