Levitation import of page 2249 rev 8194.

--- a/0-/IRC Meeting/Archive.mediawiki
+++ b/0-/IRC Meeting/Archive.mediawiki
@@ -1,3 +1,5 @@
+* 2007-01-29: [[IRC_Meeting/2007-01-29/Agenda|Agenda]] [[IRC_Meeting/2007-01-29/Minutes|Minutes]]
+* 2007-01-29: [[IRC_Meeting/2007-01-22/Agenda|Agenda]] [[IRC_Meeting/2007-01-22/Minutes|Minutes]]
 * 2007-01-08: [[IRC_Meeting/2007-01-08/Agenda|Agenda]] [[IRC_Meeting/2007-01-08/Minutes|Minutes]]
 * 2006-12-18: [[IRC_Meeting/2006-12-18/Agenda|Agenda]] [[IRC_Meeting/2006-12-18/Minutes|Minutes]]
 * 2006-12-04: [[IRC_Meeting/2006-12-04/Agenda|Agenda]] [[IRC_Meeting/2006-12-04/Minutes|Minutes]]
