--- a/0-/IRC Meeting/2008-04-12/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-04-12/Agenda.mediawiki
@@ -1,3 +1,7 @@
 * Check-ups:
 ** [[Component:Visualization|Visualization]] ([[User:ypnos|FoPref]])
 ** <mantis>1927</mantis> ([[User:rafl|rafl]])
+* Collections 2.0 - Source preference:
+** Should collections only use the preferred sources for querying. If so, what happens when multiple sources have the same priority?
+** If the previous question is answered positively: should source-preference be connection specific, or globally in the server.
+** Should collections maybe consider all sources in the querying, but have the possibility to only return the top-most sources to the user?
